force-app/main/default/objects/Log_Mulesoft__c/Log_Mulesoft__c.object-meta.xml
<CustomObject>
    <description>Table utilisée pour stocker les logs des chargements Mulesoft</description>
    <label>Log Mulesoft</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Log Mulesoft Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Logs Mulesoft</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>