force-app/main/default/objects/Log_Mulesoft__c/fields/Log_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Log_Error_Message__c</fullName>
    <description>Pour contenir le message d&apos;erreur brut sans troncage</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Log Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>