force-app/main/default/objects/Log_Mulesoft__c/fields/Log_Error_Message_short__c.field-meta.xml
<CustomField>
    <fullName>Log_Error_Message_short__c</fullName>
    <description>Pour contenir le message d&apos;erreur tronqué à 255 caractères</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Log Error Message (short)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>