force-app/main/default/objects/Log_Mulesoft__c/fields/Log_SIPanel_ID__c.field-meta.xml
<CustomField>
    <fullName>Log_SIPanel_ID__c</fullName>
    <description>Pour contenir l&apos;uuid /sipanel id de l&apos;enregistrement en échec</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Log SIPanel ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>