force-app/main/default/objects/Log_Mulesoft__c/fields/Log_Source_Application__c.field-meta.xml
<CustomField>
    <fullName>Log_Source_Application__c</fullName>
    <description>Pour contenir le flux qui est la source de l&apos;erreur</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Log Source Application</label>
    <length>255</length>
    <type>Text</type>
</CustomField>