force-app/main/default/objects/Log_Mulesoft__c/fields/Log_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>Log_Sync_Date__c</fullName>
    <description>Pour contenir la date (format texte)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Log Sync Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>