force-app/main/default/objects/Log_Mulesoft__c/fields/Log_Sync_Type__c.field-meta.xml
<CustomField>
    <fullName>Log_Sync_Type__c</fullName>
    <description>Pour préciser si synchronisation en masse ou synchronisation unitaire</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Log Sync Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>