force-app/main/default/objects/Log_Mulesoft__c/listViews/Logs_Mulesoft_du_jour.listView-meta.xml
<ListView>
    <fullName>Logs_Mulesoft_du_jour</fullName>
    <columns>NAME</columns>
    <columns>Log_Source_Application__c</columns>
    <columns>Log_SIPanel_ID__c</columns>
    <columns>Log_Sync_Date__c</columns>
    <columns>Log_Error_Message__c</columns>
    <columns>Log_Sync_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Logs Mulesoft du jour</label>
</ListView>